--- a/assets/www/posts.html
+++ b/assets/www/posts.html
@@ -6,7 +6,7 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <title>My App</title>  
-   <script src="cordova.js"></script>  
+   <script src="cordova1.js"></script>  
   <link rel="stylesheet" href="lib/onsen/css/onsenui.css">  
   <link rel="stylesheet" href="styles/app.css"/>
   <link rel="stylesheet" href="styles/onsen-css-components.css">  
